plugins {
    id 'java-library'
    id "io.github.goooler.shadow" version "8.1.8"
    id 'maven-publish'
}

group = (project.hasProperty('group') && project.group != 'unspecified') ? project.group : 'dev.cakestudio'
version = (project.hasProperty('version') && project.version != 'unspecified') ? project.version : '1.3.2'

repositories {
    mavenCentral()
    maven { url = 'https://repo.papermc.io/repository/maven-public/' }
    maven { url = 'https://oss.sonatype.org/content/groups/public/' }
    maven { url = 'https://repo.tcoded.com/releases' } // Folia
}

dependencies {
    compileOnly 'com.destroystokyo.paper:paper-api:1.16.5-R0.1-SNAPSHOT'

    // Folia
    api "com.tcoded:FoliaLib:0.5.1"

    // Adventure
    api 'net.kyori:adventure-platform-bukkit:4.4.1'
    api 'net.kyori:adventure-text-minimessage:4.26.1'
    api 'net.kyori:adventure-text-serializer-legacy:4.26.1'
    api 'net.kyori:adventure-text-serializer-plain:4.26.1'

    // Lombok
    compileOnly "org.projectlombok:lombok:1.18.42"
    annotationProcessor "org.projectlombok:lombok:1.18.42"
    testCompileOnly "org.projectlombok:lombok:1.18.42"
    testAnnotationProcessor "org.projectlombok:lombok:1.18.42"
}

java {
    toolchain.languageVersion = JavaLanguageVersion.of(17)
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
}

tasks.jar {
    enabled = true
    archiveClassifier.set('raw')
}

tasks.shadowJar {
    archiveClassifier.set('')
    archiveFileName.set("CakeAuctionAPI-${version}.jar")
}

build.dependsOn shadowJar

publishing {
    publications {
        CakeAuctionAPIPublication(MavenPublication) {
            artifactId = 'CakeAuctionAPI'
            groupId = project.group
            version = project.version

            artifact tasks.shadowJar
        }
    }
    repositories {
        mavenLocal()
    }
}